# mangowc

./: .markdownlintrc  COMMANDS.md  IMPLEMENTATION_SUMMARY.md  README.md  REVIEW_FINDINGS.md  TECHNICAL_DEBT.md  USAGE.md  bnc.sh  config.conf  flake.nix  mangowc.scm  maomao.c  meson.build  result
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  build-arch.yml  build-nixos.yml  build.yml  docs.yml
assets/: mango-portals.conf
mmsg/: mmsg.c
nix/: default.nix  hm-modules.nix  install-config-to-etc.patch  nixos-modules.nix
protocols/: dwl-ipc-unstable-v2.xml
src/: mango.c  maomao.c  type.h
src/animation/: client.c  client.h  common.c  common.h  layer.c  layer.h  tag.c  tag.h
src/client/: client.c  client.h
src/common/: array.h  list.h  util.c  util.h
src/config/: parse_config.c  parse_config.h  preset.h  preset_config.h
src/data/: static_keymap.h
src/dispatch/: bind_declare.h  bind_define.c  bind_define.h  function_registry.def
src/ext-protocol/: dwl-ipc.h  ext-workspace.h  foreign-toplevel.h  tablet.h  tearing.h  text-input.h  wlr_ext_workspace_v1.c
src/ext-workspace/: ext-workspace-internal.h  ext-workspace.c  ext-workspace.h  output.c  tag-worksapce.h  transaction-addon.c  transaction-addon.h
src/fetch/: client.h  common.h  monitor.h
src/layout/: arrange.c  arrange.h  horizontal.h  layout.c  layout.h  vertical.h
tests/: meson.build  test_chvt_backup_selmon.c
